# grpc-playground

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  build.sh  example.data  generate.sh  run.sh
protos/: backup.proto  example.proto  helloworld.proto  outer.proto  ping.proto
src/: Client.h  ReactorBase.h  SerializationTest.cpp  Test.h  Tools.cpp  Tools.h  TunnelBrokerClient.cpp  TunnelBrokerClient.h  WriteReactorBase.h  client.cpp  constants.rs  inner_server.cpp  main.cpp  main.rs  outer_server.cpp  server.cpp  threadSafeQueue.h  tools.rs
src/Authentication/: AuthenticationHandlerBase.h  AuthenticationManager.cpp  AuthenticationManager.h  PakeAuthenticationHandler.cpp  PakeAuthenticationHandler.h  WalletAuthenticationHandler.cpp  WalletAuthenticationHandler.h
src/client/: BidiReactor.h  ClientBidiReactorBase.h  ClientReadReactorBase.h  ClientTalkReactor.h  ClientWrapper.h  ClientWriteReactorBase.h  ReadReactor.h  WriteReactor.h  client.cpp  client.rs  main.rs
src/inner/: main.rs  service.rs
src/inner_server/: InnerServiceImpl.cpp  InnerServiceImpl.h  TalkReactor.h
src/lib/: BaseReactor.h  Constants.h  ReactorStatusHolder.h  Tools.h  Worker.h
src/lib/client-base-reactors/: ClientBidiReactorBase.h  ClientReadReactorBase.h  ClientWriteReactorBase.h
src/lib/server-base-reactors/: ServerBidiReactorBase.h  ServerReadReactorBase.h  ServerWriteReactorBase.h
src/outer/: inner_client.rs  main.rs  service.rs
src/outer_server/: OuterServiceImpl.cpp  OuterServiceImpl.h  ServiceClient.h  TalkBetweenServicesReactor.cpp  TalkBetweenServicesReactor.h  TalkWithClientReactor.h
src/reactors/: AddAttachmentReactor.h  AddAttachmentsReactor.h  ClientBidiReactorBase.h  ClientReadReactorBase.h  ClientWriteReactorBase.h  CreateNewBackupReactor.h  PullBackupReactor.h  SendLogReactor.h
src/reactors-base/: ClientBidiReactorBase.h  ClientReadReactorBase.h  ClientWriteReactorBase.h
src/server/: BidiReactorBase.h  ReadReactorBase.h  ServerBidiReactorBase.h  ServerReadReactorBase.h  ServerWriteReactorBase.h  WriteReactorBase.h  server.cpp
