[package]
name = "grpc-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "outer"
path = "src/outer/main.rs"

[dependencies]
tonic = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.9"
derive_more = "0.99"
futures-core = "0.3"
tracing = "0.1"
prost = "0.9"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
h2 = "0.3"

[build-dependencies]
tonic-build = "0.6"
